# telegram-stable-diffusion-bot

./: .env.sample  README.md  docker-compose.yaml
app/: build.gradle.kts  settings.gradle.kts
app/src/main/kotlin/: Main.kt  Rabbit.kt
worker/: .env.sample  .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
